--- a/resources/PrimaryStage.fxml
+++ b/resources/PrimaryStage.fxml
@@ -134,7 +134,7 @@
                   <Insets />
                </StackPane.margin>
             </VBox>
-            <VBox fx:id="stack3" prefHeight="400.0" prefWidth="800.0" visible="false">
+            <VBox fx:id="stack3" prefHeight="400.0" prefWidth="800.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="800.0">
                      <children>
@@ -200,7 +200,7 @@
                            </children>
                         </HBox>
                         <ImageView fx:id="img_3_theme" fitHeight="260.0" fitWidth="260.0" layoutX="480.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="btn_3_submit" layoutX="175.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleBtn3Submit" text="Modify now" />
+                        <Button fx:id="btn_3_submit" layoutX="175.0" layoutY="210.0" mnemonicParsing="false" onAction="#handleBtn3Submit" text="Modify now" />
                         <Separator layoutX="15.0" layoutY="5.0" prefHeight="3.0" prefWidth="750.0" />
                      </children>
                   </Pane>
@@ -214,7 +214,7 @@
                   </Pane>
                </children>
             </VBox>
-            <VBox fx:id="stack4" prefHeight="400.0" prefWidth="800.0">
+            <VBox fx:id="stack4" prefHeight="400.0" prefWidth="800.0" visible="false">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="800.0">
                      <children>
@@ -228,7 +228,7 @@
                               <Insets left="20.0" />
                            </HBox.margin>
                         </TextField>
-                        <Button fx:id="btn_4_choose" onAction="#handleBtn4Choose" mnemonicParsing="false" prefHeight="10.0" prefWidth="40.0" text="...">
+                        <Button fx:id="btn_4_choose" mnemonicParsing="false" onAction="#handleBtn4Choose" prefHeight="10.0" prefWidth="40.0" text="...">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
@@ -238,19 +238,24 @@
                   <Pane fx:id="pane4" prefHeight="290.0" prefWidth="800.0">
                      <children>
                         <Separator layoutX="15.0" layoutY="5.0" prefHeight="3.0" prefWidth="750.0" />
-                        <VBox layoutX="270.0" layoutY="60.0" prefHeight="200.0" prefWidth="240.0">
+                        <VBox layoutX="270.0" layoutY="30.0" prefHeight="260.0" prefWidth="240.0">
                            <children>
-                              <Button fx:id="btn_4_new_draft" onAction="#handleBtn4NewDraft" mnemonicParsing="false" styleClass="blue_button" text="Generate new draft">
+                              <Button fx:id="btn_4_new_draft" mnemonicParsing="false" onAction="#handleBtn4NewDraft" styleClass="blue_button" text="Generate new draft">
                                  <VBox.margin>
                                     <Insets top="10.0" />
                                  </VBox.margin></Button>
+                              <Button fx:id="btn_4_new_page" layoutX="10.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleBtn4NewPage" styleClass="blue_button" text="Generate new page">
+                                 <VBox.margin>
+                                    <Insets top="30.0" />
+                                 </VBox.margin>
+                              </Button>
                               <Button fx:id="btn_4_check" mnemonicParsing="false" styleClass="blue_button" text="Check modification">
                                  <VBox.margin>
-                                    <Insets top="20.0" />
+                                    <Insets top="30.0" />
                                  </VBox.margin></Button>
-                              <Button fx:id="btn_4_whole_site" onAction="#handleBtn4WholeSite" mnemonicParsing="false" styleClass="blue_button" text="Create whole site">
+                              <Button fx:id="btn_4_whole_site" mnemonicParsing="false" onAction="#handleBtn4WholeSite" styleClass="blue_button" text="Create whole site">
                                  <VBox.margin>
-                                    <Insets top="20.0" />
+                                    <Insets top="30.0" />
                                  </VBox.margin></Button>
                            </children>
                         </VBox>
